--- a/src/components/dashboard/dashboard.html
+++ b/src/components/dashboard/dashboard.html
@@ -14,7 +14,7 @@
 
 <main>
   <h1>Dashboard</h1>
-  <div class="callout dash-box">
+  <div class="callout">
     <h5>{{message | initCaps}}</h5>
   </div>
 </main>
