--- a/src/sass/frontend.sass
+++ b/src/sass/frontend.sass
@@ -1,15 +1,4 @@
+@import "meyer-reset";
+
 body
-  display: block
-  align-items: center
-  justify-content: center
-main
-  padding: 0 2*7px
-
-.dash-box
-  position: relative
-
-.dash-box__number
-  position: absolute
-  top: 0
-  right: 2*7px
-  font-size: 3rem
+  padding: 20px 20px
